--- a/Prevu.Synoptics.V4035_EcoGreen/Pages/P140.xaml
+++ b/Prevu.Synoptics.V4035_EcoGreen/Pages/P140.xaml
@@ -18,10 +18,13 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="44" StatusComponent="140-01-MA1" PipeHeight="Medium" Canvas.Left="932" Canvas.Top="265" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+    <Labels:Pipe Width="77" StatusComponent="140-01-MA1" PipeHeight="Medium" Canvas.Left="895" Canvas.Top="243" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
-          <RotateTransform Angle="90"/>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90.907"/>
+          <TranslateTransform/>
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
@@ -34,9 +37,9 @@
     </Labels:Pipe>
     <Labels:Pipe Width="110" StatusComponent="155-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="612" Canvas.Top="667" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Width="93" StatusComponent="153-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="397" Canvas.Top="623" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Width="566" StatusComponent="143-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="248" Canvas.Top="374" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="807" StatusComponent="143-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="248" Canvas.Top="378" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="189" StatusComponent="129-01-MA1" PipeHeight="Medium" Canvas.Left="636" Canvas.Top="212"/>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="253" StatusComponent="143-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="124" Canvas.Top="498">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="249" StatusComponent="143-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="126" Canvas.Top="500">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
@@ -44,7 +47,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="59" StatusComponent="128-01-MA1" PipeHeight="Medium" Canvas.Left="514" Canvas.Top="187" RenderTransformOrigin="0.5,0.5"/>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="114" StatusComponent="140-01-MA1" PipeHeight="Medium" Canvas.Left="950" Canvas.Top="282"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="114" StatusComponent="140-01-MA1" PipeHeight="Medium" Canvas.Left="929" Canvas.Top="277"/>
     <Labels:Pipe Width="36" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1306" Canvas.Top="477" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="170-21-CV1" VisibilitySignal="LS2">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -61,7 +64,7 @@
     </Labels:Pipe>
     <Labels:Pipe Width="93" StatusComponent="170-01-MA1" PipeHeight="Medium" Canvas.Left="1358" Canvas.Top="581" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="170-21-CV1" VisibilitySignal="LS1"/>
     <Labels:Pipe Width="1061" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="265" Canvas.Top="493" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="170-21-CV1" VisibilitySignal="LS2"/>
-    <Labels:Pipe Width="144" StatusComponent="140-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="842" Canvas.Top="303" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe Width="70" StatusComponent="150-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1120" Canvas.Top="344" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
@@ -100,11 +103,11 @@
     <Machines:NT_ConveyorBelt HorizontalAlignment="Center" VerticalAlignment="Top" Height="3" Width="184" RenderTransformOrigin="0.5,0.5" Canvas.Left="230" Canvas.Top="616"/>
     <Machines:NT_ConveyorBelt HorizontalAlignment="Center" VerticalAlignment="Top" Height="1" Width="180" Canvas.Left="694" Canvas.Top="660"/>
     <Machines:V01_ALV_VibratingFeeder Canvas.Left="558" Canvas.Top="175" Height="75" Width="150" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:V01_NT_Belt_BottleSorter Canvas.Left="768" Canvas.Top="154" Height="116" Width="200" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="770" Canvas.Top="367" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_NT_Belt_BottleSorter Canvas.Left="1011" Canvas.Top="220" Height="116" Width="200" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="1011" Canvas.Top="371" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_NT_Belt_wMetalDetector_Diverter Canvas.Left="1178" Canvas.Top="380" Height="116" Width="200" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:NT_ConveyorBelt Height="1" Width="144" Canvas.Left="385" Canvas.Top="181" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="1044" Canvas.Top="277" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="790" Canvas.Top="206" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:Manual_selection Height="77" Width="41" Canvas.Left="734" Canvas.Top="578" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_Material_Inlet_Outlet Canvas.Left="1182" Canvas.Top="68" Height="69" Width="53" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
       <Machines:V01_Material_Inlet_Outlet.RenderTransform>
@@ -119,16 +122,16 @@
     <Machines:Waste Height="46" Width="44" Canvas.Left="842" Canvas.Top="704" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="128-01-MA1" JumpToLabel="126-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="203" Canvas.Top="156"/>
     <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="170-01-MA1" JumpToLabel="228-01-MA1" Canvas.Left="1395" Canvas.Top="551"/>
-    <Labels:JumpLabel JumpFromLabel="180-01-MA1" JumpToLabel="032-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="710" Canvas.Top="753" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DetailsLabel ComponentName="170-SORT" DetailsPageName="D170" Canvas.Left="1319" Canvas.Top="371" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-    <Labels:DetailsLabel ComponentName="140-SORT" DetailsPageName="D140" Canvas.Left="803" Canvas.Top="150" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:JumpLabel JumpFromLabel="180-01-MA1" JumpToLabel="032-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="710" Canvas.Top="739" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DetailsLabel ComponentName="170-SORT" DetailsPageName="D170" Canvas.Left="1319" Canvas.Top="369" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DetailsLabel ComponentName="150-SORT" DetailsPageName="D150" Canvas.Left="1046" Canvas.Top="216" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="153-01-MA1" Canvas.Left="326" Canvas.Top="556"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="155-01-MA1" Height="50" Width="90" Canvas.Left="532" Canvas.Top="596"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="180-01-MA1" Canvas.Left="841" Canvas.Top="603"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="129-01-MA1" Canvas.Left="586" Canvas.Top="249"/>
-    <Labels:DeviceLabel ComponentName="143-01-MA1" Canvas.Left="770" Canvas.Top="311" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="143-01-MA1" Canvas.Left="939" Canvas.Top="398" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="128-01-MA1" Canvas.Left="412" Canvas.Top="215" RenderTransformOrigin="0.508,0.545" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="150-01-MA1" Canvas.Left="1118" Canvas.Top="220" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="140-01-MA1" Canvas.Left="827" Canvas.Top="145" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="168-01-MA1" Canvas.Left="1300" Canvas.Top="173" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="168-02-EC1" Canvas.Left="1300" Canvas.Top="54" HorizontalAlignment="Center" VerticalAlignment="Top"/>
   </Canvas>
