--- a/Prevu.Synoptics.V4228-RES/Pages/P100.xaml
+++ b/Prevu.Synoptics.V4228-RES/Pages/P100.xaml
@@ -258,7 +258,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Rectangle HorizontalAlignment="Center" Height="110" Stroke="Black" VerticalAlignment="Top" Width="2" Canvas.Left="910" Canvas.Top="650" RenderTransformOrigin="0.5,0.5"/>
+    <Rectangle HorizontalAlignment="Center" Height="110" Stroke="Black" VerticalAlignment="Top" Width="2" Canvas.Left="910" Canvas.Top="667" RenderTransformOrigin="0.5,0.5"/>
     <Rectangle HorizontalAlignment="Center" Height="28" Stroke="Black" VerticalAlignment="Top" Width="2" Canvas.Left="1083" Canvas.Top="120"/>
     <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="261" Canvas.Top="717">
       <Machines:WaterPump.RenderTransform>
@@ -333,8 +333,8 @@
     <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1323" Canvas.Top="166" Height="44" Width="44" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_CV_Valve Canvas.Left="365" Canvas.Top="350" Height="24" Width="46" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:Waste Height="46" Width="44" Canvas.Left="832" Canvas.Top="439" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Rectangle Height="74" Stroke="Black" Width="4" Canvas.Left="276" Canvas.Top="317" RenderTransformOrigin="0.5,0.5" StrokeThickness="2" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:External Height="62" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="250" Canvas.Top="274" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Rectangle Height="117" Stroke="Black" Width="4" Canvas.Left="276" Canvas.Top="297" RenderTransformOrigin="0.5,0.5" StrokeThickness="2" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:External Height="62" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="250" Canvas.Top="246" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Machines:External.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="-1"/>
@@ -351,7 +351,6 @@
     <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="123-01-MA1" Canvas.Left="1300" Canvas.Top="103"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="113-01-MA1" Canvas.Left="239" Canvas.Top="769"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="117-01-MA1" Canvas.Left="750" Canvas.Top="751"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="117-71-ECS3" Canvas.Left="941" Canvas.Top="697"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="100-01-MA1" Canvas.Left="750" Canvas.Top="109"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="119-01-MA1" Canvas.Left="164" Canvas.Top="593"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="106-01-MA1" Canvas.Left="809" Canvas.Top="305"/>
@@ -366,9 +365,10 @@
     <Labels:DeviceLabel ComponentName="110-21-CV1" Canvas.Left="269" Canvas.Top="433" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="125-01-MA1" Canvas.Left="1382" Canvas.Top="252" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="110-23-CV1" Canvas.Left="343" Canvas.Top="293" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="110-71-ECS1" Canvas.Left="170" Canvas.Top="353" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="117-71-ECS2" Canvas.Left="941" Canvas.Top="640" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="117-71-ECS4" Canvas.Left="941" Canvas.Top="754" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="110-71-ECS1" Canvas.Left="158" Canvas.Top="314" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.356,-0.04"/>
+    <Labels:DeviceLabel ComponentName="117-71-ECS2" Canvas.Left="941" Canvas.Top="697" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="110-71-ECS5" Canvas.Left="158" Canvas.Top="376" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="WT-COMM" Canvas.Left="158" Canvas.Top="252" RenderTransformOrigin="0.356,-0.04" HorizontalAlignment="Center" VerticalAlignment="Top"/>
 
   </Canvas>
 </UserControl>
