--- a/Prevu.Synoptics.V4659_Steinbais/L1/Pages/L1_P430.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/L1/Pages/L1_P430.xaml
@@ -10,15 +10,14 @@
              x:Class="Prevu.Synoptics.L1_P430" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas>
-    <Labels:Pipe Width="64" RenderTransformOrigin="0.5,0.5" StatusComponent="L1+328-01-MA1" Color="Air" Canvas.Left="84" Canvas.Top="782" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="250" RenderTransformOrigin="0.5,0.5" StatusComponent="L1+328-01-MA1" PipeHeight="Medium" Canvas.Left="165" Canvas.Top="779" HorizontalAlignment="Center" VerticalAlignment="Center" />
-    <Labels:Pipe Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="L1+326-01-MA1" PipeHeight="Medium" Canvas.Left="127" Canvas.Top="746" HorizontalAlignment="Center" VerticalAlignment="Center" >
+    <Labels:Pipe Width="118" Canvas.Top="699" StatusComponent="L1+322-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="99" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="L1+322-21-CV1" VisibilitySignal="MAT1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
+    <Labels:Pipe Width="250" RenderTransformOrigin="0.5,0.5" StatusComponent="L1+328-01-MA1" PipeHeight="Medium" Canvas.Left="165" Canvas.Top="769" HorizontalAlignment="Center" VerticalAlignment="Top" />
     <Labels:Pipe Width="147" Canvas.Top="220" StatusComponent="L1+430-01-MA4" RenderTransformOrigin="0.5,0.5" Canvas.Left="1016" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Width="154" VisibilityComponent="" Canvas.Top="426" StatusComponent="L1+430-03-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="789" HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water"/>
     <Labels:Pipe Width="153" Color="Water" StatusComponent="L1+420-71-ECS1" VisibilityComponent="" Canvas.Left="392" Canvas.Top="131" Icon="Right" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -56,8 +55,8 @@
     </Labels:Pipe>
     <Labels:Pipe Width="19" Color="Water" StatusComponent="L1+420-21-CV1" VisibilityComponent="" Canvas.Left="583" Canvas.Top="141" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Width="72" StatusComponent="L1+443-01-MA1" Canvas.Left="1240" Canvas.Top="651" HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct"/>
-    <Labels:Pipe Width="173" StatusComponent="L1+470-01-MA1" Canvas.Left="908" Canvas.Top="764" HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct"/>
-    <Labels:Pipe Width="52" StatusComponent="L1+470-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="884" Canvas.Top="740" HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct">
+    <Labels:Pipe Width="173" StatusComponent="L1+470-01-MA1" Canvas.Left="908" Canvas.Top="758" HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct"/>
+    <Labels:Pipe Width="52" StatusComponent="L1+470-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="884" Canvas.Top="734" HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
@@ -134,21 +133,21 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="114" Canvas.Top="537" StatusComponent="L1+320-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="217" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe Width="76" Canvas.Top="518" StatusComponent="L1+320-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="236" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="98" Canvas.Top="646" StatusComponent="L1+322-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="109" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe Width="82" Canvas.Top="598" StatusComponent="L1+322-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="117" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="574" RenderTransformOrigin="0.5,0.5" StatusComponent="L1+328-01-MA1" PipeHeight="Medium" Canvas.Left="123" Canvas.Top="497" HorizontalAlignment="Center" VerticalAlignment="Top" >
+    <Labels:Pipe Width="564" RenderTransformOrigin="0.5,0.5" StatusComponent="L1+328-01-MA1" PipeHeight="Medium" Canvas.Left="128" Canvas.Top="492" HorizontalAlignment="Center" VerticalAlignment="Top" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
@@ -193,7 +192,7 @@
         </TransformGroup>
       </Machines:V01_CV_Valve_wColor.RenderTransform>
     </Machines:V01_CV_Valve_wColor>
-    <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="146" Canvas.Top="592" Height="22" Width="145" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="146" Canvas.Top="557" Height="22" Width="145" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_VSP_SepTank_w4Paddles Canvas.Left="836" Canvas.Top="187" Height="263" Width="210" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:WaterPump Width="46" Canvas.Top="406" RenderTransformOrigin="0.5,0.5" Canvas.Left="860" Height="45" HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water">
       <Machines:WaterPump.RenderTransform>
@@ -222,13 +221,11 @@
     <Machines:V01_CV_Valve Canvas.Left="536" Canvas.Top="129" Height="28" Width="55" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_WCE_Centrifuge Canvas.Left="765" Canvas.Top="596" Height="132" Width="167" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Rectangle Height="45" Canvas.Left="1091" Canvas.Top="639" Width="61" Fill="#FF8A8A8A" RadiusX="10" RadiusY="10" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:SCW_ScrewConveyor_straight RenderTransformOrigin="0.5,0.5" Width="118" Height="18" Canvas.Left="1024" Canvas.Top="756" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Machines:SCW_ScrewConveyor_straight RenderTransformOrigin="0.5,0.5" Width="118" Height="18" Canvas.Left="1024" Canvas.Top="750" HorizontalAlignment="Center" VerticalAlignment="Top" />
     <Machines:V01_DCE_Centrifuge Canvas.Left="1131" Canvas.Top="630" Height="166" Width="114" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1091" Canvas.Top="642" Height="38" Width="42" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1297" Canvas.Top="627" Height="54" Width="60" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:V01_VS_Airlock Canvas.Left="133" Canvas.Top="674" Width="50" Height="50" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-    <Machines:V01_ScarpaTrasporto Canvas.Left="125" Canvas.Top="747" Height="48" Width="72" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-    <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="47" Canvas.Top="759" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="126" Canvas.Top="739" Height="70" Width="63" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:JumpLabel JumpFromLabel="L1+458-01-MA1" JumpToLabel="L1+475-41-LT1" Canvas.Left="1052" Canvas.Top="319" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="Left"/>
     <Labels:JumpLabel JumpFromLabel="L1+420-DISCHARGE" JumpToLabel="L0+421-01-MA1" Canvas.Left="614" Canvas.Top="563" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:JumpLabel JumpFromLabel="L1+460-01-MA1" JumpToLabel="L1+482-01-MA1" Canvas.Left="1444" Canvas.Top="480" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -243,7 +240,7 @@
     <Labels:DeviceLabel Canvas.Top="687" Canvas.Left="1281" ComponentName="L1+446-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel VerticalAlignment="Top" Canvas.Top="584" Canvas.Left="1375" HorizontalAlignment="Center" ComponentName="L1+447-21-CV1"/>
     <Labels:DeviceLabel ComponentName="L1+320-43-LT1" Canvas.Left="292" Canvas.Top="198" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="L1+322-01-MA1" Canvas.Left="115" Canvas.Top="535" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Labels:DeviceLabel ComponentName="L1+322-01-MA1" Canvas.Left="115" Canvas.Top="497" HorizontalAlignment="Center" VerticalAlignment="Top" />
     <Labels:DeviceLabel ComponentName="L1+458-01-MA1" Canvas.Left="1272" Canvas.Top="93" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L1+460-01-MA1" Canvas.Left="1377" Canvas.Top="259" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L1+460-21-CV1" Canvas.Left="1101" Canvas.Top="425" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -258,14 +255,24 @@
     <Labels:DeviceLabel ComponentName="L1+420-21-CV1" Canvas.Left="519" Canvas.Top="74" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L1+420-02-MA1" Canvas.Left="671" Canvas.Top="379" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L1+470-01-MA1" Canvas.Left="864" Canvas.Top="556" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="L1+442-01-MA1" Canvas.Left="999" Canvas.Top="783" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="L1+442-01-MA1" Canvas.Left="999" Canvas.Top="777" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L1+443-01-MA1" Canvas.Left="1133" Canvas.Top="579" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L1+443-02-MA1" Canvas.Left="992" Canvas.Top="637" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L1+420-DISCHARGE" Canvas.Left="455" Canvas.Top="572" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-    <Labels:DeviceLabel ComponentName="L1+328-01-MA1" Canvas.Left="27" Canvas.Top="703" HorizontalAlignment="Left" VerticalAlignment="Center" />
-    <Labels:DeviceLabel ComponentName="L1+326-01-MA1" Canvas.Left="196" Canvas.Top="674" HorizontalAlignment="Center" VerticalAlignment="Center" />
+    <Labels:DeviceLabel ComponentName="L1+328-01-MA1" Canvas.Left="49" Canvas.Top="693" HorizontalAlignment="Left" VerticalAlignment="Center" />
     <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="557" Canvas.Top="365" Height="22" Width="114" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L1+420-24-CV1" Canvas.Left="455" Canvas.Top="353" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L1+420-71-ECS4" Canvas.Left="292" Canvas.Top="130" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="142" Canvas.Top="633" Height="22" Width="114" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+      <Machines:V01_CV_ValvolaGhigliottina.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="180.472"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Machines:V01_CV_ValvolaGhigliottina.RenderTransform>
+    </Machines:V01_CV_ValvolaGhigliottina>
+    <Labels:DeviceLabel ComponentName="L1+322-21-CV1" Canvas.Left="267" Canvas.Top="620" HorizontalAlignment="Center" VerticalAlignment="Top" />
   </Canvas>
 </UserControl>
