--- a/Prevu.Synoptics.V4659_Steinbais/L0/Details/L0_D997.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/L0/Details/L0_D997.xaml
@@ -42,18 +42,17 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="270" RenderTransformOrigin="0.5,0.5" StatusComponent="" Canvas.Left="52" Canvas.Top="344" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="L0+997-SHAKE" VisibilitySignal="ESR" Color="ByProduct"/>
-        <Labels:Pipe Width="270" RenderTransformOrigin="0.5,0.5" StatusComponent="" Canvas.Left="358" Canvas.Top="344" VisibilityComponent="L0+997-SHAKE" VisibilitySignal="ESR" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="270" RenderTransformOrigin="0.5,0.5" StatusComponent="" Canvas.Left="52" Canvas.Top="344" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="L0+997-61-BAG" VisibilitySignal="ESR" Color="ByProduct"/>
+        <Labels:Pipe Width="270" RenderTransformOrigin="0.5,0.5" StatusComponent="" Canvas.Left="358" Canvas.Top="344" VisibilityComponent="L0+997-62-BAG" VisibilitySignal="ESR" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="L0+997-61-BAG" SignalName="LSHA" Canvas.Left="160" Canvas.Top="134"/>
         <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="L0+997-61-BAG" SignalName="SEL" Canvas.Left="105" Canvas.Top="267" SignalPosition="Top" Width="230"/>
         <Labels:SignalLabel ComponentName="L0+997-62-BAG" SignalName="LSHA" Canvas.Left="403" Canvas.Top="134" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:SignalLabel ComponentName="L0+997-62-BAG" SignalName="SEL" Canvas.Left="345" Canvas.Top="269" HorizontalAlignment="Center" VerticalAlignment="Top" SignalPosition="Top" Width="235"/>
         <Labels:DeviceLabel ComponentName="L0+997-21-CV1" Canvas.Left="175" Canvas.Top="62" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="L0+997-22-CV1" Canvas.Left="418" Canvas.Top="62" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="L0+997-SHAKE" Canvas.Left="296" Canvas.Top="24" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:SignalLabel ComponentName="L0+997-61-BAG" SignalName="PEC" Canvas.Left="105" Canvas.Top="382" SignalPosition="Top" Width="230" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:SignalLabel ComponentName="L0+997-61-BAG" SignalName="PEC" Canvas.Left="105" Canvas.Top="382" SignalPosition="Top" Width="230" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:SignalLabel ComponentName="L0+997-62-BAG" SignalName="PEC" Canvas.Left="346" Canvas.Top="381" SignalPosition="Top" Width="234" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:SignalLabel ComponentName="L0+997-SHAKE" SignalName="ESR" Canvas.Left="225" Canvas.Top="326" SignalPosition="Top" Width="230" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:SignalLabel ComponentName="L0+997-61-BAG" SignalName="ESR" Canvas.Left="225" Canvas.Top="326" SignalPosition="Top" Width="230" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="L0+997-61-BAG" Canvas.Left="79" Canvas.Top="198" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="L0+997-62-BAG" Canvas.Left="517" Canvas.Top="198" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
