V4300: Color For Silo 810 e 820 Changed to DryMaterial from Water

--- a/Prevu.Synoptics.V4300_Covinil/Details/D810_2.xaml
+++ b/Prevu.Synoptics.V4300_Covinil/Details/D810_2.xaml
@@ -10,7 +10,7 @@
              d:Background="{DynamicResource MaterialDesignPaper}"
              x:Class="Prevu.Synoptics.D810_2">
     <Canvas Height="450" Width="332">
-        <Machines:V01_SLX_Silo_wAgitator Canvas.Left="5" Canvas.Top="2" Height="442" Width="323" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_SLX_Silo_wAgitator Canvas.Left="5" Canvas.Top="2" Height="442" Width="323" HorizontalAlignment="Left" VerticalAlignment="Center" Color="DryMaterial"/>
         <Labels:SignalLabel ComponentName="810-41-LEV" SignalName="LSHA" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="59" Canvas.Top="35"/>
         <Labels:SignalLabel ComponentName="810-41-LEV" SignalName="LSH" Canvas.Left="59" Canvas.Top="84" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:SignalLabel ComponentName="810-41-LEV" SignalName="LSL" Canvas.Left="84" Canvas.Top="278" HorizontalAlignment="Left" VerticalAlignment="Top"/>
