--- a/Prevu.Synoptics.V4300_Covinil/Pages/P230.xaml
+++ b/Prevu.Synoptics.V4300_Covinil/Pages/P230.xaml
@@ -207,14 +207,14 @@
     <Machines:V01_DV_Diverter Canvas.Left="398" Canvas.Top="625" Height="56" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_DV_Diverter Canvas.Left="527" Canvas.Top="770" Height="56" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_EC_FiltroManiche Canvas.Left="912" Canvas.Top="204" Height="112" Width="78" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:V01_SLX_Silo_wAgitator Canvas.Left="804" Canvas.Top="266" Height="272" Width="190" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_SLX_Silo_wAgitator Canvas.Left="804" Canvas.Top="266" Height="272" Width="190" HorizontalAlignment="Center" VerticalAlignment="Top" Color="DryMaterial"/>
     <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="948" Canvas.Top="162" Height="36" Width="36" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_SCW200_ScrewPaddleGate Canvas.Left="1012" Canvas.Top="602" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="878" Canvas.Top="588" HorizontalAlignment="Center" VerticalAlignment="Top" Width="196"/>
     <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1290" Canvas.Top="776" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="1027" Canvas.Top="791" Width="186" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_EC_FiltroManiche Canvas.Left="1275" Canvas.Top="125" Height="112" Width="78" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:V01_SLX_Silo_wAgitator Canvas.Left="1167" Canvas.Top="187" Height="272" Width="189" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_SLX_Silo_wAgitator Canvas.Left="1167" Canvas.Top="187" Height="272" Width="189" HorizontalAlignment="Center" VerticalAlignment="Top" Color="DryMaterial"/>
     <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1311" Canvas.Top="83" Height="36" Width="36" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_SCW200_ScrewPaddleGate Canvas.Left="1374" Canvas.Top="522" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="1241" Canvas.Top="508" Width="195" HorizontalAlignment="Center" VerticalAlignment="Top"/>
